# reana-demo-atlas-recast

./: .travis.yml  AUTHORS.md  AUTHORS.rst  LICENSE  README.md  README.rst  reana-debug.yaml  reana-htcondorcern.yaml  reana.yaml
.github/workflows/: ci.yml
eventselection/: CMakeLists.txt  Dockerfile  README.md
eventselection/MyEventSelection/: CMakeLists.txt
eventselection/MyEventSelection/MyEventSelection/: MyEventSelectionAlg.h
eventselection/MyEventSelection/Root/: LinkDef.h  MyEventSelectionAlg.cxx
eventselection/MyEventSelection/util/: myEventSelection.cxx
statanalysis/: .gitlab-ci.yml  Dockerfile  README.md  make_ws.py  plot.py  set_limit.py
statanalysis/data/: background.root  data.root
statanalysis/example_results/: data_limit.json  data_limit_muone.json  limit_data.json  limit_data_nomsignal.json
tests/: log-messages.feature  run-duration.feature  workspace-files.feature
workflow/: steps-htcondorcern.yml  steps.yml  workflow-htcondorcern.yml  workflow.yml
workflow/test_inputs/: inp1.yml  inp2.yml
